syntax = "proto3";
package today.expresso.grpc.payment.domain;

enum PaymentSystem {
    YANDEX = 0;
}

enum PaymentOption {
    BANK_CARD = 0;
    YANDEX_WALLET = 1;
    APPLE_PAY = 2;
    SBERBANK = 3;
    QIWI = 4;
    WEBMONEY = 5;
    CASH = 6;
    MOBILE_BALANCE = 7;
    ALFABANK = 8;
}

enum PaymentStatus {
    SUCCESSFUL = 0;
    DECLINED = 1;
    CANCELLED = 2;
}

enum PaymentType {
    DEPOSIT = 0;
    WITHDRAWAL = 1;
    REFUND = 2;
    AUTH = 3;
    SETTLE = 4;
    VOID = 5;
}

message PaymentPageReference {
    string url = 1;
    string params = 2;
}

message WithdrawalResult {

    enum WithdrawalAction {
        DECLINE = 0;
        APPROVE = 1;
        POSTPONE = 2;
    }

    string orderId = 1;
    WithdrawalAction action = 2;
    string message = 3;
}

message PaymentMethod {

    enum Status {
        OK = 0;
        INREVIEW = 1;
        INCOMPLETE = 2;
        BLOCKED = 3;
    }

    int64 id = 1;
    int64 userId = 2;
    PaymentOption paymentOption = 3;
    PaymentSystem paymentSystem = 4;
    Status status = 5;
    int64 expirationDate = 6;
    string displayName = 7;
    string color = 8;
    bool deleted = 9;
    bool isDefault = 10;

    int64 createdDate = 11;
    int64 firstPaymentDate = 12;
    int64 lastPaymentDate = 13;
    int64 lastFailedDate = 14;

    string details = 15; // json
}

message PaymentPageInfo {
    int64 userId = 1;
    int64 accountId = 2;
    string currency = 3;
    string locale = 4;


}
